tests/backend/checkmach/fail4.output
File "fail4.ml", line 1:
Error: Annotation check for noalloc failed on function HIDE_NAME
